--- a/app.json
+++ b/app.json
@@ -13,8 +13,7 @@
       "backgroundColor": "#ffffff"
     },
     "ios": {
-      "supportsTablet": true,
-      "package": "xplane.app"
+      "supportsTablet": true
     },
     "android": {
       "adaptiveIcon": {
