--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-cookies/cookies": "^6.2.1",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "^12.0.5",
     "expo-linking": "~6.3.1",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
+    "expo-web-browser": "^13.0.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
