--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-cookies/cookies": "^6.2.1",
+    "d3-array": "^3.2.4",
+    "d3-interpolate-path": "^2.3.0",
+    "d3-scale": "^4.0.2",
+    "d3-shape": "^3.2.0",
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "^12.0.5",
@@ -22,14 +26,19 @@
     "react": "18.2.0",
     "react-native": "0.74.1",
     "react-native-appwrite": "^0.3.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-url-polyfill": "^2.0.0",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-svg": "15.2.0",
+    "react-native-url-polyfill": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/d3-array": "^3.2.1",
+    "@types/d3-interpolate-path": "^2.0.3",
+    "@types/d3-scale": "^4.0.8",
+    "@types/d3-shape": "^3.1.6",
     "@types/react": "~18.2.45",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
