--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
     "@types/react": "~18.2.45",
+    "react-native-svg-transformer": "^1.4.0",
     "tailwindcss": "^3.3.2",
     "typescript": "^5.1.3"
   },
