--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
+    "luxon": "^3.4.4",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
@@ -39,6 +40,7 @@
     "@types/d3-interpolate-path": "^2.0.3",
     "@types/d3-scale": "^4.0.8",
     "@types/d3-shape": "^3.1.6",
+    "@types/luxon": "^3.4.2",
     "@types/react": "~18.2.45",
     "react-native-svg-transformer": "^1.4.0",
     "tailwindcss": "^3.3.2",
