--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@tanstack/react-query": "^5.45.1",
     "d3-array": "^3.2.4",
     "d3-interpolate-path": "^2.3.0",
     "d3-scale": "^4.0.2",
@@ -19,6 +20,7 @@
     "expo-constants": "~16.0.1",
     "expo-font": "^12.0.5",
     "expo-linking": "~6.3.1",
+    "expo-media-library": "~16.0.3",
     "expo-router": "~3.5.14",
     "expo-status-bar": "~1.12.1",
     "expo-web-browser": "^13.0.3",
@@ -33,8 +35,7 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-view-shot": "3.8.0",
-    "expo-media-library": "~16.0.3"
+    "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
