--- a/ios/xplaneapp/Info.plist
+++ b/ios/xplaneapp/Info.plist
@@ -77,5 +77,7 @@
     <string>Light</string>
     <key>UIViewControllerBasedStatusBarAppearance</key>
     <false/>
+    <key>NSSupportsLiveActivities</key>
+    <true/>
   </dict>
 </plist>
