--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-view-shot": "3.8.0"
+    "react-native-view-shot": "3.8.0",
+    "@react-native-async-storage/async-storage": "1.23.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
