--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@shopify/react-native-skia": "^1.3.7",
     "@tanstack/react-query": "^5.45.1",
+    "d3": "^7.9.0",
     "d3-array": "^3.2.4",
     "d3-interpolate-path": "^2.3.0",
     "d3-scale": "^4.0.2",
@@ -19,6 +22,7 @@
     "expo": "~51.0.8",
     "expo-constants": "~16.0.1",
     "expo-font": "^12.0.5",
+    "expo-haptics": "~13.0.1",
     "expo-linking": "~6.3.1",
     "expo-media-library": "~16.0.3",
     "expo-router": "~3.5.14",
@@ -35,12 +39,11 @@
     "react-native-screens": "3.31.1",
     "react-native-svg": "15.2.0",
     "react-native-url-polyfill": "^2.0.0",
-    "react-native-view-shot": "3.8.0",
-    "@react-native-async-storage/async-storage": "1.23.1",
-    "expo-haptics": "~13.0.1"
+    "react-native-view-shot": "3.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@types/d3": "^7.4.3",
     "@types/d3-array": "^3.2.1",
     "@types/d3-interpolate-path": "^2.0.3",
     "@types/d3-scale": "^4.0.8",
